[metadata]
name = emane-docker
summary = EMANE (Extendable Module Ad-hoc Network Emulator) experiment platform with Docker
description-file = README.md
author = 'Kerim Gokarslan'
author-email = 'kerimgokarslan@gmail.com'
home-page = https://github.com/gokarslan/emane-docker
version = 0.0.1
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7

[files]
packages = emane_docker
